5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1685_1949.log
== TEST (2019-06-17 22:14:14) 
-- CODE:
a = int (input("Qual o numero apostodado pelo jogador: "))
b = int(input("Numero sorteador: "))

c = a // 10
c1 =  a % 10
d = b // 10
d1 = b % 10
if a == b :
	print("Ganhou R$ ", 100.000.00)
elif ((c == d) and (c1 == d1)) or ((c == d1) and (d == c1)):
	print("Ganhou R$ ",  50.000.00)
elif ((c== d)or (c == d1) or (d == c1) or (d1 == c1)):
	print("Ganhou R$ ", 1.000.00)
else:
	print("Perdeu")

-- ERROR:
File "XXXX", line 9
    print("Ganhou R$ ", 100.000.00)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-17 22:14:39) 
-- CODE:
a = int (input("Qual o numero apostodado pelo jogador: "))
b = int(input("Numero sorteador: "))

c = a // 10
c1 =  a % 10
d = b // 10
d1 = b % 10
if a == b :
	print("Ganhou R$ ", 100.000)
elif ((c == d) and (c1 == d1)) or ((c == d1) and (d == c1)):
	print("Ganhou R$ ",  50.000)
elif ((c== d)or (c == d1) or (d == c1) or (d1 == c1)):
	print("Ganhou R$ ", 1.000)
else:
	print("Perdeu")

-- OUTPUT:
Ganhou R$  100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-17 22:15:45) 
-- CODE:
a = int (input("Qual o numero apostodado pelo jogador: "))
b = int(input("Numero sorteador: "))

c = a // 10
c1 =  a % 10
d = b // 10
d1 = b % 10
if a == b :
	print("Ganhou R$ 100.000,00")
elif ((c == d) and (c1 == d1)) or ((c == d1) and (d == c1)):
	print("Ganhou R$ 50.000,00")
elif ((c== d)or (c == d1) or (d == c1) or (d1 == c1)):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")

-- EXECUTION TIME:
0.823447
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
